--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("./assets/back.png");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 100%;
   background-size: cover;
   color: #fff;
   padding: 1em;
@@ -61,6 +61,26 @@ html {
   font-weight: 700;
   color: rgb(0, 0, 71);
 }
+.filtered{
+  max-height: 200px;
+  width: 100%;
+  background-color: #fff;
+  overflow-y: auto;
+  color: #000;
+  z-index: 99;
+  border-radius: 10px;
+  
+}
+.filtered ul{
+  list-style: none;
+}
+.filtered ul li{
+  line-height: 1;
+  
+}
+.filtered ul li p{
+line-height: 1;
+}
 /*===  current weather display  ===*/
 .currentWeather {
   position: relative;
@@ -82,14 +102,14 @@ html {
   font-size: 20px;
 }
 .mid-icon {
-  font-size: 1.5em;
-  color: rgb(0, 0, 71);
-  margin-bottom: 5px;
+  height: 64px;
+  width: 64px;
+  object-fit: cover;
 }
 .large-icon {
-  color: rgb(0, 0, 71);
-  margin-right: 20px;
-  font-size: 6em;
+  height: 10em;
+  width: 10em;
+  object-fit: cover;
 }
 
 /* forecast*/
@@ -105,32 +125,55 @@ html {
   overflow-x: auto;
 }
 
-.card {
+.hourcard {
   height: 200px;
   width: 200px;
   margin-right: 10px;
   background-color: transparent !important;
 }
 
-.hourForecast::-webkit-scrollbar {
+.hourForecast::-webkit-scrollbar, .dailyForecast::-webkit-scrollbar {
   width: 8px;
   height: 5px;
 }
-.hourForecast::-webkit-scrollbar-track {
+.hourForecast::-webkit-scrollbar-track, .dailyForecast::-webkit-scrollbar-track {
   background-color: rgb(228, 242, 247) !important;
   border-radius: 15px;
 }
-.hourForecast::-webkit-scrollbar-thumb {
+.hourForecast::-webkit-scrollbar-thumb, .dailyForecast::-webkit-scrollbar-thumb {
   background: #868686;
   border-radius: 15px;
 }
-.hourForecast::-webkit-scrollbar-thumb:hover {
+.hourForecast::-webkit-scrollbar-thumb:hover, .dailyForecast::-webkit-scrollbar-thumb:hover {
   background: #343434;
 }
 
 
-
-
+/* daily forecast */
+.dailycard{
+  height:200px !important;
+  width: 100%;
+  background-color: transparent !important;
+  display: flex;
+  flex-direction: column; 
+  border: 1px solid #000;
+  padding: 1em;
+  border-radius: 10px;
+}
+.dailyForecast {
+  height: 85vh;
+  background-color: #e4f2f7;
+  padding: 1em;
+  border-radius: 10px;
+  color: #000;
+  overflow-y: auto;
+}
+.dailycard p{
+  line-height: .5;
+}
+hr{
+  line-height: 1;
+}
 .city {
   display: flex;
   flex-direction: column;
@@ -179,7 +222,9 @@ html {
   .current-info p {
     font-size: 1em;
   }
-
+.dailyForecast{
+  height: 50vh;
+}
 
   
 }
